--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactjs",
   "version": "0.1.0",
+  "homepage": "https://swolf-dev.github.io/trello",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -9,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
